src/app/app_render_tests/snapshots/jiq__app__app_render_tests__search_tests__snapshot_search_bar_active_state.snap
---
source: src/app/app_render_tests/search_tests.rs
expression: output
---
"╭ Object  · .name ──────────────────────────────────────────────── L1-4/4 (0%) ╮"
"▌{                                                                             │"
"│  "name": "Alice",                                                            │"
"│  "email": "alice@example.com"                                                │"
"│}                                                                             │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"╰────────────────── > value • * iterate • ^ parent • } wrap ───────────────────╯"
"╭ Search ─────────────────────────────────────────────────────────────   1/2   ╮"
"│alice                                                                         │"
"╰──── Enter Confirm • > value • * iterate • ^ parent • } wrap • Esc Close ─────╯"
" F1/? Help • Esc Close • Enter Confirm Search                                   "
