src/app/app_render_tests/snapshots/jiq__app__app_render_tests__search_tests__snapshot_search_bar_inactive_state.snap
---
source: src/app/app_render_tests/search_tests.rs
expression: output
---
"╭ Object  · .name ──────────────────────────────────────────────── L1-4/4 (0%) ╮"
"▌{                                                                             │"
"│  "name": "Alice",                                                            │"
"│  "email": "alice@example.com"                                                │"
"│}                                                                             │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"╰───── n/N Next/Prev • Enter Next • > Drill in • Ctrl+F Edit • Esc Close 1/2   ╯"
"╭ Search ──────────────────────────────────────────────────────────────────────╮"
"│alice                                                                         │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
" F1/? Help • Esc Close • n/N Next/Prev • Ctrl+F Edit Search • / Edit Search     "
