src/app/app_render_tests/snapshots/jiq__app__app_render_tests__search_tests__snapshot_search_bar_no_matches.snap
---
source: src/app/app_render_tests/search_tests.rs
expression: output
---
"╭   ⚠ No Matches    Object ─────────────────────────────────────── L1-4/4 (0%) ╮"
"▌{                                                                             │"
"│  "name": "Alice",                                                            │"
"│  "age": 30                                                                   │"
"│}                                                                             │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"╰────────────────── > value • * iterate • ^ parent • } wrap ───────────────────╯"
"╭ Search ─────────────────────────────────────────────────────────────   0/0   ╮"
"│xyz                                                                           │"
"╰──── Enter Confirm • > value • * iterate • ^ parent • } wrap • Esc Close ─────╯"
" F1/? Help • Esc Close • Enter Confirm Search                                   "
