src/app/app_render_tests/snapshots/jiq__app__app_render_tests__search_tests__snapshot_search_bar_visible.snap
---
source: src/app/app_render_tests/search_tests.rs
expression: output
---
"╭ Object  · .name ──────────────────────────────────────────────── L1-5/5 (0%) ╮"
"▌{                                                                             │"
"│  "name": "Alice",                                                            │"
"│  "email": "alice@example.com",                                               │"
"│  "role": "admin"                                                             │"
"│}                                                                             │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"╭ Search ─────────────────────────────────────────────────────────────   1/2   ╮"
"│alice                                                                         │"
"╰───────────────────────── Enter Confirm • Esc Close ──────────────────────────╯"
" F1/? Help • Esc Close • Enter Confirm Search                                   "
