src/app/app_render_tests/snapshots/jiq__app__app_render_tests__search_tests__snapshot_search_bar_with_match_count.snap
---
source: src/app/app_render_tests/search_tests.rs
expression: output
---
"╭ Array [3 objects]  · .[0].name ─────────────────────────────── L1-11/11 (0%) ╮"
"▌[                                                                             │"
"│  {                                                                           │"
"│    "name": "alice"                                                           │"
"│  },                                                                          │"
"│  {                                                                           │"
"│    "name": "bob"                                                             │"
"│  },                                                                          │"
"│  {                                                                           │"
"│    "name": "alice"                                                           │"
"│  }                                                                           │"
"│]                                                                             │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"╰────────────────── > value • * iterate • ^ parent • } wrap ───────────────────╯"
"╭ Search ─────────────────────────────────────────────────────────────   1/2   ╮"
"│alice                                                                         │"
"╰──── Enter Confirm • > value • * iterate • ^ parent • } wrap • Esc Close ─────╯"
" F1/? Help • Esc Close • Enter Confirm Search                                   "
