src/app/app_render_tests/snapshots/jiq__app__app_render_tests__search_tests__snapshot_search_with_highlighted_matches.snap
---
source: src/app/app_render_tests/search_tests.rs
expression: output
---
"╭ Array [3 objects]  · .[0].email ────────────────────────────── L1-12/12 (0%) ╮"
"▌[                                                                             │"
"│  {                                                                           │"
"│    "name": "alice",                                                          │"
"│    "email": "alice@test.com"                                                 │"
"│  },                                                                          │"
"│  {                                                                           │"
"│    "name": "bob"                                                             │"
"│  },                                                                          │"
"│  {                                                                           │"
"│    "name": "alice"                                                           │"
"│  }                                                                           │"
"│]                                                                             │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"╭ Search ─────────────────────────────────────────────────────────────   2/3   ╮"
"│alice                                                                         │"
"╰────────────────── Enter Confirm • Tab Confirm • Esc Close ───────────────────╯"
" F1/? Help • Esc Close • Enter Confirm Search                                   "
