src/app/app_render_tests/snapshots/jiq__app__app_render_tests__search_tests__snapshot_search_with_horizontal_scroll.snap
---
source: src/app/app_render_tests/search_tests.rs
expression: output
---
"╭ Object  · .very_long_field ───────────────────────────────────── L1-4/4 (0%) ╮"
"▌                                                                              │"
"│                                                                              │"
"│                                                                     match_he │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"╰/Prev • Enter Next • > value • * iterate • ^ parent • } wrap • Ctrl+F Edit • E╯"
"╭ Search ──────────────────────────────────────────────────────────────────────╮"
"│match_here                                                                    │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
" F1/? Help • Esc Close • n/N Next/Prev • Ctrl+F Edit Search • / Edit Search     "
